Closed Bug 1829434 Opened 2 years ago Closed 2 years ago

Fix GCC -Wuninitialized warnings for StaticAutoPtr and StaticRefPtr

Categories

(Core :: XPCOM, defect, P5)

defect

Tracking

()

RESOLVED FIXED
114 Branch
Tracking Status
firefox114 --- fixed

People

(Reporter: alaskanemily, Assigned: alaskanemily)

References

Details

Attachments

(1 file)

No description provided.
Pushed by emcdonough@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/06597725cbdc Fix GCC -Wuninitialized warnings for StaticAutoPtr and StaticRefPtr r=emilio
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
Regressions: 1831827
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: