Bug 1829434 - Fix GCC -Wuninitialized warnings for StaticAutoPtr and StaticRefPtr r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D176195